--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
+amqp==5.2.0
 asgiref==3.8.1
+async-timeout==4.0.3
+billiard==3.6.4.0
 black==24.3.0
+celery==5.2.7
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==4.1.13
+flower==1.1.0
+humanize==4.10.0
+kombu==5.3.7
 mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
+Pillow==9.2.0
 platformdirs==4.2.0
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+pytz==2024.1
+redis==5.0.7
 sqlparse==0.4.4
 tomli==2.0.1
+tornado==6.4.1
 typing_extensions==4.11.0
-
-celery~=5.2.7
+vine==5.1.0
+wcwidth==0.2.13
